fix(memory): make mutations idempotent by intent and fold Unicode case in SQLite search
Personal Assistant PATCH/DELETE /memory/{id} and POST /memory/clear drop the
Idempotency-Key that was only format-checked. DefaultMemoryService now treats a
retry with the same If-Match revision (and content, for updates) as the committed
intent: a repeated delete is recognised through the tombstone it left
(MemoryRepository.deletedFrom), a repeated update returns the current memory, and
a repeated clear reports 0. Other stale revisions still conflict.

SqliteMemoryStore no longer filters text with the ASCII-only SQLite lower(); it
scans candidate rows in bounded keyset batches and matches with Locale.ROOT like
InMemoryMemoryStore, keeping the cursor contract.